Adicionado banco de dados em db
Adicionado função para botao importa no arquivo FileUpload.

Implantado funcinalidade para ler xls e importa para db.

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR"> <!-- Altere o idioma se necessário -->
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/excel_icon.webp" /> <!-- Ícone da aba -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="description" content="Aplicativo de gerenciamento de contratos e projetos." /> <!-- Descrição para SEO -->
+    <meta name="keywords" content="contratos, projetos, gerenciamento, tabela" /> <!-- Palavras-chave para SEO -->
+    <meta name="author" content="Sua Empresa" /> <!-- Autor do site -->
+    <title>FM Controle - Gerenciamento de Contratos</title> <!-- Título da aba -->
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <div id="root"></div> <!-- Ponto de entrada da aplicação React -->
+    <script type="module" src="/src/main.jsx"></script> <!-- Script principal -->
   </body>
 </html>
